<resources>
    <string name="app_name">Simple Banking APP</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dontHaveAnAccount">Do not have an account?</string>
    <string name="loginHere">Login Here</string>
    <string name="welcome">Welcome</string>
    <string name="userName">Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="pleaseEnterUsername">Please enter username</string>
    <string name="pleaseEnterPassword">Please enter password</string>
    <string name="pleaseEnterFirstName">Please enter first name</string>
    <string name="pleaseEnterLastName">Please enter last name</string>
    <string name="pleaseEnterPhoneNumber">Please enter phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="availableBalance">Available Balance</string>
    <string name="transfer">Transfer</string>
    <string name="bills">Bills</string>
    <string name="recharge">Recharge</string>
    <string name="more">More</string>
    <string name="myAccounts">My Accounts</string>
</resources>